added crud search, submit and rendering of results; fixed breaking java dependency